--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-google.oauth2.client-id=
-google.oauth2.client-secret=
-google.oauth2.auth.url=https://accounts.google.com/o/oauth2/auth
-google.oauth2.auth.callback-url=http://localhost:8080/oauth2/google/callback
-google.oauth2.token.url=https://www.googleapis.com/oauth2/v4/token
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
+
+spring.redis.host=localhost
+spring.session.redis.configure-action=none
+
+logging.level.root=debug
+
